# microgpt

./: .editorconfig  .gitignore  .lfsconfig  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: custom_tokenizer.ipynb  gpt-2.ipynb  model.ipynb  tokenizer.ipynb  visualize.ipynb
pretrained/: .gitignore
pretrained/model/: eval.txt  eval_1.txt  eval_2.txt  eval_3.txt  loss_1.txt  loss_2.txt  loss_3.txt  model.json  model.pt  tokenizer.json  tokenizer_vocab.json
pretrained/model_stage_1/: loss.txt  model.pt
pretrained/tokenizer/: tokenizer.json  tokenizer_vocab.json  train_tokenizer.py
pretrained/tokenizer/data/: .gitignore  pretrained.tokenizer.model  pretrained.tokenizer.vocab
scripts/: download_pretrained.py  lint-fix.sh  lint.sh  s3.py  train_tokenizer.py
scripts/data/: .gitignore  prepare_data.py  prepare_data_stage2.py
scripts/eval/: hellaswag.py
scripts/model/: .gitignore  combine_model_stage2_runs.py  download_pretrained_model_weights.sh  train_model.py  train_model_stage1.py  train_model_stage2.py
scripts/model/data/: prepare_data_stage1.py  prepare_data_stage2.py
scripts/model/data/data_stage1/shards/val/: shard_000000.npy
scripts/tokenizer/: .gitignore  train_tokenizer.py
src/microgpt/: __init__.py  logger.py  types.py  utils.py
src/microgpt/common/: data_source.py  ddp.py  device.py  fs.py  logger.py  trainer.py
src/microgpt/model/: __init__.py  data_loader.py  hellaswag_utils.py  model.py  model_trainer.py  model_types.py  model_utils.py  modules.py  types.py
src/microgpt/tokenizer/: __init__.py  data_utils.py  gpt_tokenizer_utils.py  tokenizer.py  tokenizer_trainer.py  tokenizer_utils.py  types.py
src/microgpt/trainer/: __init__.py  trainer.py  types.py
tests/: test_model.py  test_tokenizer.py
